--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,4 @@
 :root {
-    --main-color: #000;
-    --sub-color: #000;
-    --w-color: #000;
-    --b-color: #000;
-    --main-text-color: #000;
-    --sub-text-color: #000;
-
     --fw-Medium-500: 500;
     --fw-SemiBold-600: 600;
     --fw-Bold-700: 700;
@@ -24,6 +17,7 @@
 
 body {
     scroll-behavior: smooth;
+    font-family: 'Cairo', sans-serif;
 }
 
 @media (max-width: 786px) {
@@ -111,3 +105,47 @@ a {
         width: 1150px;
     }
 }
+/* Start home */
+.home {
+    background-color: #e0e0e0d0;
+    height: 100vh;
+}
+
+.container,
+.home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.contact-form h2 {
+    text-transform: capitalize;
+    font-size: 32px;
+    margin-bottom: 35px;
+}
+
+
+.contact-form input {
+    border: none;
+    outline: none;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    border-radius: 100px;
+    width: 100%;
+    background-color: #fff;
+}
+.contact-form .label {
+    display: block;
+    padding: 10px 30px;
+}
+
+.contact-form button {
+    border: none;
+    outline: none;
+    background-color: #fff;
+    padding: 15px 20px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+/* End home */
