--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@
 body {
     scroll-behavior: smooth;
     font-family: 'Cairo', sans-serif;
+    overflow-x: hidden;
 }
 
 @media (max-width: 786px) {
@@ -120,7 +121,9 @@ a {
     text-align: center;
     gap: 100px;
 }
-
+.home .container {
+    align-items: flex-start;
+}
 .contact-form h2 {
     text-transform: capitalize;
     font-size: 32px;
@@ -129,7 +132,8 @@ a {
 }
 
 
-.contact-form input {
+.contact-form input,
+select {
     border: none;
     outline: none;
     margin-bottom: 20px;
@@ -159,13 +163,15 @@ label {
 .container .image {
     position: relative;
     animation: ro 4s infinite linear;
+    width: 410px;
+    height: 410px;
 }
 
 .container .image::before {
     content: "";
     position: absolute;
-    top: -5px;
-    left: -5px;
+    top: -10px;
+    left: -4.4px;
     width: 100%;
     height: 100%;
     border-top: 5px solid #0086cf;
@@ -175,6 +181,7 @@ label {
     border-radius: 100%;
     animation: rotate 4s infinite linear;
 }
+
 @keyframes rotate {
     100% {
         rotate : 360deg;
@@ -190,28 +197,52 @@ label {
     flex: 2;
 }
 
+@media (min-width: 1200px) {
+        .container .image {
+            position: sticky;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+}
+
 @media (max-width: 1200px) {
     .home .container {
         flex-direction: column-reverse;
         gap: 30px;
+        align-items: center;
+    }
+    .container .image  {
+        width: 310px;
+        height: 310px;
     }
     .container .image img {
         width: 300px;
         height: 300px;
-        max-width: 100%;
     }
-    
+    .container .contact-form {
+        width: 100%;
+    }
 }
 
 @media (max-width: 400px) {
-    .home .container {
-        flex-direction: column-reverse;
+    .container .image {
+        width: 210px;
+        height: 210px;
     }
     .container .image img {
         width: 200px;
         height: 200px;
-        max-width: 100%;
     }
-    
+}
+
+@media (max-width: 400px) {
+    .container .image {
+        width: 160px;
+        height: 160px;
+    }
+    .container .image img {
+        width: 150px;
+        height: 150px;
+    }
 }
 /* End home */
