--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,6 +145,7 @@ select {
   border-radius: 100px;
   width: 100%;
   background-color: #fff;
+  text-align: center;
 }
 
 .contact-form>section {
