--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,7 +148,7 @@ select {
   text-align: center;
 }
 
-.contact-form>section {
+.contact-form > section {
   margin-bottom: 10px;
 }
 
@@ -173,11 +173,9 @@ label span {
   color: #fff;
 }
 
-
 .container .contact-form {
   flex: 2;
 }
-
 
 .content-input {
   position: relative;
@@ -232,9 +230,9 @@ label span {
 /* End home */
 @font-face {
   src: url(../fonts/LEMONMILK-Light.otf);
-  src: url(../fonts/LEMONMILK-Bold.otf);
   src: url(../fonts/LEMONMILK-Regular.otf);
   src: url(../fonts/LEMONMILK-Medium.otf);
+  src: url(../fonts/LEMONMILK-Bold.otf);
   font-family: LEM;
 }
 .main {
@@ -324,7 +322,7 @@ label span {
   width: fit-content;
   margin: auto;
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .main a::after {
@@ -335,7 +333,7 @@ label span {
   width: 100%;
   height: 100%;
   background-color: #0086cf;
-  z-index: -1;  
+  z-index: -1;
   transition: var(--transition-3);
 }
 
@@ -345,33 +343,57 @@ label span {
 
 @media (max-width: 1200px) {
   .contetnt-logo-inf h2 {
-    font-size: 40pxx;
+    font-size: 40px;
   }
 }
+
 @media (max-width: 700px) {
   .contetnt-logo-bsa {
     gap: 3px;
   }
+
+  .contetnt-logo-bsa img {
+    width: 100px;
+  }
+
+  .contetnt-logo-bsa h2 {
+    font-size: 70px;
+    margin-bottom: 0px;
+  }
+
   .contetnt-logo-inf {
+    border-top: 5px solid #0086cf;
+    padding-top: 25px;
     flex-direction: column-reverse;
   }
+
   .contetnt-logo-inf h2 {
     border: none;
     padding: 0;
     text-align: center;
     margin-bottom: 10px;
-    font-size: 35px;
+    font-size: 28px;
   }
+
   .contetnt-logo-inf h2 sup {
-    font-size: 20px;
+    font-size: 18px;
   }
+
   .contetnt-logo-inf .content-image img {
     padding: 0;
-    width: 250px;
+    width: 200px;
     margin: auto;
   }
-  
+
+  .main-text {
+    font-size: 16px;
+  }
+
+  .main-text a {
+    font-size: 18px;
+  }
 }
+
 @media (max-width: 400px) {
   .contetnt-logo-bsa img {
     width: 100px;
