--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,7 +148,7 @@ select {
   text-align: center;
 }
 
-.contact-form > section {
+.contact-form>section {
   margin-bottom: 10px;
 }
 
@@ -204,6 +204,7 @@ label span {
   border: 2px solid #0086cf;
   position: relative;
 }
+
 .errorma {
   color: red;
   display: block;
@@ -235,6 +236,7 @@ label span {
   src: url(../fonts/LEMONMILK-Bold.otf);
   font-family: LEM;
 }
+
 .main {
   font-family: LEM;
   min-height: 100vh;
@@ -246,9 +248,11 @@ label span {
   align-items: center;
   justify-content: center;
 }
+
 .main .container {
   padding-block: 20px;
 }
+
 .contetnt-logo-bsa {
   display: flex;
   align-items: center;
@@ -295,8 +299,34 @@ label span {
   text-transform: uppercase;
   text-align: left;
   font-size: 50px;
-  border-left: 10px solid #0086cf;
   font-weight: 100;
+  position: relative;
+}
+
+.contetnt-logo-inf h2::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 0;
+  width: 7px;
+  background-color: #0086cf;
+  animation: line 2s linear infinite;
+}
+
+@keyframes line {
+  0% {
+    height: 100%;
+  }
+
+  50% {
+    height: 0%;
+  }
+
+  100% {
+    height: 100%;
+  }
 }
 
 .contetnt-logo-inf h2 sup {
@@ -362,7 +392,6 @@ label span {
   }
 
   .contetnt-logo-inf {
-    border-top: 5px solid #0086cf;
     padding-top: 25px;
     flex-direction: column-reverse;
   }
@@ -373,6 +402,32 @@ label span {
     text-align: center;
     margin-bottom: 10px;
     font-size: 28px;
+  }
+
+  .contetnt-logo-inf h2::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: -21px;
+    transform: translateX(-50%);
+    height: 7px;
+    width: 100%;
+    background-color: #0086cf;
+    animation: line 2s linear infinite;
+  }
+
+  @keyframes line {
+    0% {
+      width: 100%;
+    }
+
+    50% {
+      width: 0%;
+    }
+
+    100% {
+      width: 100%;
+    }
   }
 
   .contetnt-logo-inf h2 sup {
