--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,8 +115,44 @@ a {
   background-image: url(../images/cover0.jpg);
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff55;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.loading.show {
+  display: block;
+}
+
+.loading .square {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 6px solid #0086cf;
+  border-left: 6px solid transparent;
+  animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .home .container,
 .home {
   display: flex;
