--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,6 +130,7 @@ a {
   align-items: center;
   justify-content: center;
   display: none;
+
 }
 
 .loading.show {
@@ -137,14 +138,14 @@ a {
 }
 
 .loading .square {
-  position: fixed;
-  top: 50%;
-  left: 50%;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   border: 6px solid #0086cf;
   border-left: 6px solid transparent;
+  position: fixed;
+  top: 50%;
+  margin-top: -50px;
   animation: rotate 1s linear infinite;
 }
 
