--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ label span {
     font-size: 60px;
   }
 }
-
+/*
 .closed {
   height: 100vh;
   width: 100%;
@@ -534,3 +534,4 @@ label span {
   color: #fff;
   text-align: center;
 }
+*/
